--- a/sass/_valvulas.scss
+++ b/sass/_valvulas.scss
@@ -70,6 +70,7 @@ container-fluid {
 }
 
 .Procedimientos_imagenes img {
+
   width: 50%;
   border-radius: 1rem;
   flex-wrap: wrap
@@ -90,8 +91,7 @@ container-fluid {
 }
 
 .Procedimientos__imagen {
-  width: 30rem;
-  height: 60rem;
+
   margin-top: 4rem;
   padding: 2rem;
   border-radius: 2rem;
@@ -111,10 +111,10 @@ container-fluid {
 }
 
 .Procedimientos__imagen {
-  width: 40rem;
-  height: 60rem;
-  margin: 4rem 2rem;
-  padding: 2rem;
+  width: 50%;
+  height: 400px;
+  margin: 0;
+  padding: 0;
   border-radius: 2rem;
   flex-wrap: wrap;
   box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
@@ -125,15 +125,19 @@ container-fluid {
   }
 
   .Procedimientos__imagen {
-    width: 92%;
+    width: 50%;
     margin: 1rem auto;
     display: flex;
   }
 
-  .Procedimientos__imagen {
-    width: 90%;
-    margin: 1rem auto;
-    box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+  @media (max-width:767px) {
+    .Procedimientos__imagen {
+      width: 50%;
+      height: max-content;
+      margin: 0 auto;
+      box-shadow: 0px 0px 2px 0.3px rgba(0, 0, 0, 0.75);
+
+    }
   }
 
   .Procedimientos__imagen:hover {
