--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:wght@400;500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap");
 .body {
-  background: black;
+  background: rgb(0, 0, 0);
 }
 
+p{
+  font-size: 30px;
+}
+
+ul li{
+  font-size: 20px;
+}
 h1 {
   font-size: 60px;
   font-weight: 700;
@@ -19,7 +26,7 @@ h2 {
   text-align: center;
   font-family: "Alegreya", serif;
   color: #ffffff;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   max-width: 1200px;
 }
 
@@ -42,11 +49,12 @@ a {
   border-radius: 30px;
   font-size: 20px;
   font-family: Roboto;
-  color: #000000;
+  color: #3A5FF8;
 }
 
 .menubuttons a {
-  color: white;
+  color: rgb(255, 255, 255);
+  
 }
 
 .NicoDropdown a {
@@ -54,7 +62,7 @@ a {
 }
 
 .NicoDropdown a :hover {
-  background-color: #3877ec;
+  background-color: #000000;
 }
 
 .NicoDropdownItems :active {
@@ -62,7 +70,7 @@ a {
 }
 
 .NicoDropdownItems :hover {
-  background-color: #3877ec;
+  background-color: rgb(19, 81, 250);
 }
 
 .NicoDropdownItems a {
@@ -70,11 +78,11 @@ a {
 }
 
 .NicoDropdownItems a :hover {
-  background-color: black;
+  background-color: rgb(255, 255, 255);
 }
 
 .NicoDropdownItems a :active {
-  background-color: black;
+  background-color:transparent;
 }
 
 .menuContainer {
@@ -123,6 +131,7 @@ a {
     margin: 0;
   }
 }
+/* <!-- clases de carrusel- >  */
 
 .carousel-item img {
   height: 500px;
@@ -161,11 +170,13 @@ img {
 h1 {
   margin: 6rem auto 4rem;
   letter-spacing: 5px;
+  color:#3A5FF8;
 }
 
 h2 {
   letter-spacing: 5px;
   text-align: center;
+  margin: 6rem auto 4rem;
 }
 
 .secciones {
@@ -196,6 +207,7 @@ h2 {
   }
 }
 
+/* <!-- clases de texto y titulos - >  */ 
 .titaño {
   font-size: 18px;
   width: 90%;
@@ -209,6 +221,7 @@ h2 {
   font-size: 20px;
   color: #fdfffd;
 }
+
 
 .TextoQuienesSomos {
   font-size: 18px;
